welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: not found: value estsurOrange
	if (estsurOrange()) {caseOrange=caseOrange+1;} ;
            ^